Revert "Fix git pages"

--- a/pages/giftCard.html
+++ b/pages/giftCard.html
@@ -104,27 +104,38 @@
       </menu>
     </nav>
     <section class="pageHeader">
-      <h2>Kommande Filmer</h2>
+      <h2>Presentkort</h2>
     </section>
-    <main>
-      <section class="upcoming">
-        <ul class="upcoming-movies">
-          <li>6/1 - Operation Fortune: Ruse de Guerre</li>
-          <li>6/1 - En sång för min dotter</li>
-          <li>13/1 - All the Beauty and the Bloodshed</li>
-          <li>13/1 - A Man Called Otto</li>
-          <li>20/1 Holy Spider</li>
-          <li>20/1 - The Son</li>
-          <li>27/1 - Babylon</li>
-          <li>27/1 - The Banshees of Inisherin</li>
-          <li>3/2 - The Other Fellow</li>
-          <li>3/2 - En dag kommer allt det här bli ditt</li>
-          <li>3/2 - The Fabelmans</li>
-          <li>10/2 - Dogborn</li>
-          <li>11/2 - Godland</li>
-          <li>17/2 - Aftersun</li>
-        </ul>
-      </section>
+    <main class="content">
+      <p>
+        En fin gåva till alla filmälskare som vill sätta guldkant på biobesöket.
+        Presentkortet gäller hela bioprogrammet samt mat och dryck. Du väljer
+        beloppet och kortet är därefter giltigt i ett år. Läs hur du betalar med
+        presentkortet på hemsidan under
+        <a href="ticket-info.html">Biljettinfo</a>.
+      </p>
+      <h3>Köp presentkort på plats</h3>
+      <p>
+        Lule Northern Lights Cinema ligger på biografgatan 97 i Luleå där du kan
+        köpa vårt presentkort i kassan. Läs mer om våra
+        <a href="openingHours.html">öppettider</a>.
+      </p>  
+
+      <h3>Köp presentkort via företaget</h3>
+      <p>
+        Vill du köpa presentkort via företaget kan du mejla din beställning till
+        <a href="mailto:info@lulenorthernlightscinema.se"
+          >info@lulenorthernlightscinema.se</a
+        >. Glöm inte att bifoga företagets fakturauppgifter i mejlet.
+      </p>
+      <p>
+        <img
+          src="../static/giftcard.png"
+          alt="Bild på en biosalong med röda stolar i bakgrunden och i förgrunden är det ett glas vin, en stor bulle och ett presentkort ovanpå ett bord. Belysnigen i rummet är dämpad."
+          width="300"
+          height="300"
+        />
+      </p>
     </main>
 
     <footer class="footer">
