--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -73,8 +73,7 @@
     </header>
 
     <!-- Lägg in href-länkar för secNav i följande .js-fil:
-         js/secNav/anchors.js
-    -->
+         js/secNav/anchors.js -->
     <nav class="secNav">
       <menu class="secNav-menu">
         <li class="secNav-menu-item">
@@ -104,27 +103,24 @@
       </menu>
     </nav>
     <section class="pageHeader">
-      <h2>Kommande Filmer</h2>
+      <h2>Nyhetsbrev</h2>
     </section>
-    <main>
-      <section class="upcoming">
-        <ul class="upcoming-movies">
-          <li>6/1 - Operation Fortune: Ruse de Guerre</li>
-          <li>6/1 - En sång för min dotter</li>
-          <li>13/1 - All the Beauty and the Bloodshed</li>
-          <li>13/1 - A Man Called Otto</li>
-          <li>20/1 Holy Spider</li>
-          <li>20/1 - The Son</li>
-          <li>27/1 - Babylon</li>
-          <li>27/1 - The Banshees of Inisherin</li>
-          <li>3/2 - The Other Fellow</li>
-          <li>3/2 - En dag kommer allt det här bli ditt</li>
-          <li>3/2 - The Fabelmans</li>
-          <li>10/2 - Dogborn</li>
-          <li>11/2 - Godland</li>
-          <li>17/2 - Aftersun</li>
-        </ul>
-      </section>
+    <main class="content">
+      <p>
+        Vill du ha koll på vad som händer hos oss, premiärer, specialvisningar
+        och biljettsläpp. Varannan vecka skickar vi ut ett nyhetsprev späckat
+        med filmnyheter!
+      </p>
+      <p>
+        <a href="#">Självklart vill jag prenumerera på nyhetsbrevet!!</a>
+      </p>
+      <img
+        src="../static/newsletter.png"
+        alt="Exempel nyhetsbrev"
+        width="300"
+        height="453"
+      />
+      <p>Exemplet är från vecka 40.</p>
     </main>
 
     <footer class="footer">
