--- a/pages/ticket-info.html
+++ b/pages/ticket-info.html
@@ -73,8 +73,7 @@
     </header>
 
     <!-- Lägg in href-länkar för secNav i följande .js-fil:
-         js/secNav/anchors.js
-    -->
+        js/secNav/anchors.js -->
     <nav class="secNav">
       <menu class="secNav-menu">
         <li class="secNav-menu-item">
@@ -103,27 +102,91 @@
         </li>
       </menu>
     </nav>
-    <section class="pageHeader">
-      <h2>Kommande Filmer</h2>
-    </section>
+
     <main>
-      <section class="upcoming">
-        <ul class="upcoming-movies">
-          <li>6/1 - Operation Fortune: Ruse de Guerre</li>
-          <li>6/1 - En sång för min dotter</li>
-          <li>13/1 - All the Beauty and the Bloodshed</li>
-          <li>13/1 - A Man Called Otto</li>
-          <li>20/1 Holy Spider</li>
-          <li>20/1 - The Son</li>
-          <li>27/1 - Babylon</li>
-          <li>27/1 - The Banshees of Inisherin</li>
-          <li>3/2 - The Other Fellow</li>
-          <li>3/2 - En dag kommer allt det här bli ditt</li>
-          <li>3/2 - The Fabelmans</li>
-          <li>10/2 - Dogborn</li>
-          <li>11/2 - Godland</li>
-          <li>17/2 - Aftersun</li>
-        </ul>
+      <section name="frequently-asked">
+        <h1 class="main-title">BILJETTINFO</h1>
+        <small>Biljetter kan köpas både online och på plats</small>
+
+        <h2 class="questions-h2">FRÅGOR OCH SVAR</h2>
+
+        <h3 class="question-title">HUR KÖPER JAG BILJETTER PÅ HEMSIDAN?</h3>
+        <p class="answer">
+          Du kan antingen betala med ditt betalkort eller presentkort på
+          hemsidan, men du kan endast använda ett betalsätt per köp. Köper du
+          din biljett via hemsidan får du en bokningsbekräftelse via mejl. Vi
+          har endast direktköp på våra biljetter.
+        </p>
+
+        <h3 class="question-title">
+          VARFÖR HAR JAG INTE FÅTT EN BOKNINGSBEKRÄFTELSE?
+        </h3>
+        <p class="answer">
+          Ibland hamnar bekräftelsemailet i mottagarens skräppost. Om du märker
+          att du inte får någon bokningsbekräftelse på dina köp, kan du godkänna
+          vår mejladress som vi skickar bekräftelsen ifrån via din mejl.
+        </p>
+
+        <h3 class="question-title">
+          VARFÖR FUNGERAR DET INTE ATT KÖPA BILJETTER PÅ HEMSIDAN?
+        </h3>
+        <p class="answer">
+          Vi har märkt att det kan vara problem att köpa biljetter med
+          webbläsaren Explorer. Andra webbläsare ska fungera fint. Har du ett
+          Nordea-kort kan du behöva kontakta din bank för att låsa upp ditt kort
+          för internetköp.
+        </p>
+
+        <h3 class="question-title">ÅTERKÖP OCH BYTEN</h3>
+        <p class="answer">
+          Biljetter till ordinarie repertoarfilm: Det går bra att göra återköp
+          eller byta biljetterna till en annan visning eller en annan
+          repetoarfilm senast 24 timmar innan filmen börjar. Återköp och byten
+          av repertoarbiljetter görs endast på biografen. Live på bio: Vi har
+          inga återköp på Live på bio-biljetter, men du kan byta till annan
+          föreställning inom respektive genre med samma biljettpris: Met-opera
+          kan till exempel bytas till annan Met-opera. Saknas det visningar inom
+          genren går det inte att byta. Bytet görs endast på biografen senast 72
+          timmar innan visningen börjar. Specialvisningar: Vi har inga återköp
+          på biljetter till specialvisningar, men det går bra att byta biljetten
+          till en annan specialvisning inom respektivie genre med samma
+          biljettpris: Frukostbio kan till exempel bytas till en annan
+          frukostbio. Saknas det visningar inom genren går det inte att byta.
+          Bytet görs endast på biografen 72 timmar innan filmen börjar.
+        </p>
+
+        <img src="../static/faq.jpeg" alt="" />
+      </section>
+
+      <section name="additional-info">
+        <h2 class="asked-title">BILJETT MED MAT OCH DRYCK</h2>
+        <p class="answer">
+          Du kan beställa från vår meny i samband med ditt biljettköp via
+          hemsidan eller på biografen. Vid förköp serveras maten inför
+          filmstart, men du kan även enkelt beställa mat och dryck under filmen.
+          Alla våra tre salonger är serverade och har en bar som bemannas
+          kontinuerligt, vilket betyder att du får avnjuta god mat och dryck
+          tillsammans med din film!
+        </p>
+
+        <h2 class="asked-title">ÅTERKÖP OCH BYTEN</h2>
+        <p class="answer">
+          Biljetter till ordinarie repertoarfilm: Det går bra att göra återköp
+          eller byta biljetterna till en annan visning eller en annan
+          repetoarfilm senast 24 timmar innan filmen börjar. Återköp och byten
+          av repertoarbiljetter görs endast på biografen. Live på bio: Vi har
+          inga återköp på Live på bio-biljetter, men du kan byta till annan
+          föreställning inom respektive genre med samma biljettpris: Met-opera
+          kan till exempel bytas till annan Met-opera. Saknas det visningar inom
+          genren går det inte att byta. Bytet görs endast på biografen senast 72
+          timmar innan visningen börjar. Specialvisningar: Vi har inga återköp
+          på biljetter till specialvisningar, men det går bra att byta biljetten
+          till en annan specialvisning inom respektivie genre med samma
+          biljettpris: Frukostbio kan till exempel bytas till en annan
+          frukostbio. Saknas det visningar inom genren går det inte att byta.
+          Bytet görs endast på biografen 72 timmar innan filmen börjar.
+        </p>
+        <img src="../static/cinemafood.jpg" alt="" />
       </section>
     </main>
 
